--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^7.0.1",
     "jest": "^27.3.1",
     "lint-staged": "^11.0.1",
+    "paillier-bigint": "^3.4.3",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.7.2"
